@@ -10,6 +10,11 @@ description here
 ====================================================================================
 
 ******************************************
+CHANGELOG: 13-1-2012  & 12-1-2012 RFT
+Trainer jack audio conflic fix
+
+
+******************************************
 CHANGELOG: 12-1-2012  & 12-1-2012 ER
 Allow hiding of owner name on splash screen
 
